--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@antfu/ni": "^0.21.12",
     "@octokit/rest": "^20.1.1",
     "@types/node": "^20.14.5",
-    "dotenv": "^16.4.5"
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
+    "execa": "^9.3.0",
+    "ora": "^8.0.1",
+    "prompts": "^2.4.2",
+    "type-fest": "^4.20.1",
+    "zod": "^3.23.8"
   }
 }
