--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@raphael-08/gdb",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "dist/index.js",
+  "bin" : "dist/index.js",
   "types": "dist/types/index.d.ts",
   "type": "module",
   "scripts": {
