--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@raphael-08/gdb",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "",
-  "main": "dist/index.js",
-  "bin": "dist/index.js",
+  "main": "dist/api/api.js",
+  "bin": "dist/cli/cli.js",
   "types": "dist/types/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "rm -rf dist && tsup src/index.ts --format esm --clean --minify --metafile && tsc --emitDeclarationOnly",
+    "build": "rm -rf dist && tsup src/* --format esm --clean --minify --metafile && tsc --emitDeclarationOnly",
     "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
     "test": "node dist/index.js"
   },
