--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
     "skipLibCheck": true,
     "strict": false,
     "esModuleInterop": true,
@@ -27,5 +29,5 @@
     "emitDeclarationOnly": true
   },
   "exclude": ["node_modules", "_dist"],
-  "include": ["src"],
+  "include": ["src/**/*"]
 }
