--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "type": "module",
   "scripts": {
     "build": "rm -rf dist && tsup && tsc --emitDeclarationOnly",
-    "dev": "tsup src/index.ts --format esm --watch --clean --onSuccess \"node dist/index.js\"",
-    "test": "node dist/index.js"
+    "dev": "tsup --onSuccess \"node dist/index.js\"",
+    "test": "node dist/cli/cli.js"
   },
   "keywords": [],
   "author": "",
