--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rm -rf dist && tsup && tsc --emitDeclarationOnly",
     "dev": "tsup --onSuccess \"node dist/index.js\"",
     "test": "node dist/cli/cli.js",
-    "pub" : "pnpm build && pnpm publish --access public"
+    "pub": "pnpm build && pnpm publish --access public"
   },
   "keywords": [],
   "author": "",
@@ -32,5 +32,6 @@
     "prompts": "^2.4.2",
     "type-fest": "^4.20.1",
     "zod": "^3.23.8"
-  }
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
