--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@octokit/rest": "^20.1.1",
     "@types/node": "^20.14.5",
     "chalk": "^5.3.0",
+    "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "execa": "^9.3.0",
